6.1.4
-----
1. Don't show group player's in sycn dialog, instead allow showing sync dialog
   from group player (but only if group is playing).
2. Fix reading 'Show ratings' from default settings.

6.1.3
-----
1. Add group players to sync dialog.
2. Only handle 'Esc' key if keyboard shortcuts enabled.
3. Allow list of 3rd party scrolled lists to be updated.
4. When dropping external files onto queue don't clear any existing tracks.
5. Allow downloads on iOS.
6. If set to show track subtitle then append this to title.

6.1.2
-----
 1. Alphabetically order user-defined roles in MAI track info.
 2. Add 'Set/Disc subtitle' to advanced search for LMS 9.0+ - thanks to Michael
    Herger.
 3. Add Spanish translation - thanks to arpena.
 4. In mobile layout with bottom navigation add more padding between this and
    controls.
 5. Re-add 'Play all' and 'Add all' actions to clamped search results.
 6. If unpinned queue is shown then close when click on browse view.
 7. Fix not being able to interact with queue when its shown over now-playing
    when using Firefox.
 8. When switching players in 'Extra player settings' try to preserve section.
 9. Only draw current indicator in browse view if track has a number.
10. Fix showing subtitles in browse lists.

6.1.1
-----
1. If navigating from clicked item (e.g. year) don't refresh home before
   showing relevant list.
2. Allow 3rd party scrollable lists to provide subtitle for settings UI.
3. Ensure title and 'Close' button remain visible in 'Scrollable lists'
   dialog.
4. Add 'Subtitle' to advanced search for LMS 9.0+ - thanks to Michael Herger.
5. On desktop browsers dim main toolbar when window does not have focus.
6. For desktop layout if queue is shown unpinned then adjust position of hover
   buttons in browse lists.
7. Disable prev/next button in party mode.

6.1.0
-----
 1. Add ability for other plugins to provide scrolled lists - thanks to Michael
    Herger.